--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="w3l-header" id="home">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark pl-0 pr-0">
-        <a class="navbar-brand m-0" href="index.html"><span class="fa fa-gamepad"></span> Eccentric </a>
+        <a class="navbar-brand m-0" href="index.html"><span class="fa fa-space-shuttle"></span> Eccentric </a>
         <!-- if logo is image enable this   
             <a class="navbar-brand" href="#index.html">
                 <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
@@ -59,8 +59,9 @@
       <h3 class="banner-text"><small>Hello, I’m</small>
         Abhilash Nishane
       </h3>
-      <p class="mt-3 mb-5"> I love to work in User Experience & User Interface designing. Because I love to solve the design problem and find easy and
-        better solutions to solve it. I always try my best to make good user interface with the best user experience.</p><br>
+      <!-- <p class="mt-3 mb-5"> I love to work in User Experience & User Interface designing. Because I love to solve the design problem and find easy and
+        better solutions to solve it. I always try my best to make good user interface with the best user experience.</p><br> -->
+        <p class="mt-3 mb-5">Explorer <br />Startup Guy <br />Front End Developer</p><br>
       <a href="portfolio.html" class="btn btn-light btn-style mr-3">My Work</a>
       <a href="#about.html" class="btn btn-outline-light btn-style">Hire Me</a>
     </div>
@@ -77,7 +78,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 content-photo">
-					<a href="#"><img src="assets/images/myimage.jpg" class="img-fluid" alt="content-photo"></a>
+					<a href="#"><img src="assets/images/Abhilash.jpg" class="img-fluid" alt="content-photo"></a>
 				</div>
 				<div class="col-lg-8 content-left mt-lg-0 mt-5 ">
 					<h3>I'm a Passionate designer & developer who loves simplicity in things and crafts beautiful user interfaces with love.</h3>
