--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Home | Abhilash Nishane</title>
+  <title>Portfolio | Abhilash Nishane</title>
 
   <!-- google fonts -->
   <link href="//fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
@@ -23,20 +23,16 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark pl-0 pr-0">
         <a class="navbar-brand m-0" href="index.html"><span class="fa fa-space-shuttle"></span> Eccentric </a>
-        <!-- if logo is image enable this   
-            <a class="navbar-brand" href="#index.html">
-                <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-            </a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon fa fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active mr-lg-4">
-              <a class="nav-link pl-0 pr-0" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item mr-lg-4">
+              <a class="nav-link pl-0 pr-0" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active mr-lg-4">
               <a class="nav-link pl-0 pr-0" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item mr-lg-4">
@@ -56,14 +52,12 @@
 </header>
 <!-- //header -->
 <!--  Main banner section -->
-<section class="w3l-main-banner">
+<!-- <section class="w3l-main-banner">
   <div class="banner-view">
     <div class="banner-info container">
       <h3 class="banner-text"><small>Hello, I’m</small>
         Abhilash Nishane
       </h3>
-      <!-- <p class="mt-3 mb-5"> I love to work in User Experience & User Interface designing. Because I love to solve the design problem and find easy and
-        better solutions to solve it. I always try my best to make good user interface with the best user experience.</p><br> -->
         <p class="mt-3 mb-5">Explorer <br />Startup Guy <br />Front End Developer</p><br>
       <a href="portfolio.html" class="btn btn-light btn-style mr-3">My Work</a>
       <a href="#about.html" class="btn btn-outline-light btn-style">Hire Me</a>
@@ -73,10 +67,10 @@
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
-</section>
+</section> -->
 <!--  //Main banner section -->
 <!-- w3l-content-photo-5 -->
-<div class="w3l-content-photo-5 py-5" id="about">
+<!-- <div class="w3l-content-photo-5 py-5" id="about">
 	<div class="content-main pt-lg-5 pt-md-3 pb-0">
 		<div class="container">
 			<div class="row">
@@ -95,9 +89,22 @@
 			</div>
 		</div>
 	</div>
-</div>
-<!-- //w3l-content-photo-5 -->
+</div> -->
+
 <section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+        <div class="col-lg-12 col-md-12 feature-grid">
+          <div style="font-size: 2rem;">Portfolio</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- //w3l-content-photo-5 -->
+<!-- <section class="w3l-services-block-3">
   <div class="features-main pb-5 pt-0 text-center">
     <div class="container pb-lg-3">
       <div class="row features">
@@ -191,9 +198,398 @@
       </div>
     </div>
   </div>
+</section> -->
+
+<div class="container pb-lg-3">
+  <div class="row features">
+    <div class="col-lg-12 col-md-12 feature-grid">
+      <div class="portfolio-p-header">catchme (mobile app)</div>
+    </div>
+  </div>
+</div>
+
+<!-- START | CATCHME APP -->
+<section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/catchme_app_android/01 newsfeed1.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/02 newsfeed2.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/03 explore.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/04 notifications.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/05 contacts.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/06 active chat.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/catchme_app_android/07 public page.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/08 profile.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/09 showcase1.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/10 showcase2.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/11 showcase3.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/12 more.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_app_android/13 signup.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </section>
+<!-- END | CATCHME APP -->
+
+
+<div class="container pb-lg-3">
+  <div class="row features">
+    <div class="col-lg-12 col-md-12 feature-grid">
+      <div class="portfolio-p-header">catchme (web desktop)</div>
+    </div>
+  </div>
+</div>
+
+<!-- START | CATCHME WEB DESKTOP -->
+<section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/catchme_web_desktop/01_landing_page.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_web_desktop/03_home.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_web_desktop/04_home.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_web_desktop/07_events.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/catchme_web_desktop/08_events.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END | CATCHME WEB DESKTOP -->
+
+
+<div class="container pb-lg-3">
+  <div class="row features">
+    <div class="col-lg-12 col-md-12 feature-grid">
+      <div class="portfolio-p-header">manmatters (web mobile)</div>
+    </div>
+  </div>
+</div>
+
+<!-- START | MANMATTERS WEB MOBILE -->
+<section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/manmatters_web_mobile/mm (1).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (2).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (3).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (4).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (6).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (7).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/manmatters_web_mobile/mm (8).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (9).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (10).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (11).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (12).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (13).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (14).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (15).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/manmatters_web_mobile/mm (16).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END | MANMATTERS WEB MOBILE -->
+
+
+<div class="container pb-lg-3">
+  <div class="row features">
+    <div class="col-lg-12 col-md-12 feature-grid">
+      <div class="portfolio-p-header">EngineersConnect (web mobile)</div>
+    </div>
+  </div>
+</div>
+
+<!-- START | ENGINEERSCONNECT WEB MOBILE -->
+<section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/ec_web_mobile/ec (1).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/ec_web_mobile/ec (2).jpg" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END | ENGINEERSCONNECT WEB MOBILE -->
+
+
+<div class="container pb-lg-3">
+  <div class="row features">
+    <div class="col-lg-12 col-md-12 feature-grid">
+      <div class="portfolio-p-header">EngineersConnect (web desktop)</div>
+    </div>
+  </div>
+</div>
+
+<!-- START | ENGINEERSCONNECT WEB DESKTOP -->
+<section class="w3l-services-block-3">
+  <div class="features-main pb-5 pt-0 text-center">
+    <div class="container pb-lg-3">
+      <div class="row features">
+
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/ec_web_desktop/01_ec_landing_page.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/ec_web_desktop/02_ec_profile.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service1">
+              <img src="assets/images/ec_web_desktop/03_ec_newsfeed.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 feature-grid">
+          <a href="#url">
+            <div class="feature-body service2">
+              <img src="assets/images/ec_web_desktop/04_ec_chatting.png" class="img-fluid" />
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END | ENGINEERSCONNECT WEB DESKTOP -->
+
+
+
 <!-- gallery-7 -->
-<section class="w3l-gallery-7">
+<!-- <section class="w3l-gallery-7">
 	<div class="gallery-7_sur py-5">
 		<div class="container py-lg-5">
 			<div id="container">
@@ -220,10 +616,10 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 <!-- //gallery-7 -->
 <!-- iphone home block -->
-<section class="w3l-blog py-5 text-center">
+<!-- <section class="w3l-blog py-5 text-center">
     <div class="container py-lg-5">
         <div class="row">
             <div class="col-lg-12">
@@ -243,19 +639,12 @@
                     consequuntur. Vero sed hic omnis, odit in ipsam facilis beatae, assumenda dolore necessitatibus sequi?</p>
                 <a href="blog1.html" class="btn-style btn-primary btn mt-lg-5 mt-4">View my project</a>
             </div>
-            <!-- <div class="col-lg-3 col-6 pl-md-3 pl-2 mt-lg-0 mt-md-5 mt-4">
-                <div class="img-block">
-                    <a href="#img">
-                        <img src="assets/images/p2.jpg" class="img-fluid" alt="image" />
-                    </a>
-                </div>
-            </div> -->
         </div>
     </div>
-</section>
+</section> -->
 <!-- //iphone home block -->
 <!-- testimonial -->
-<section class="w3l-quote-main" id="client">
+<!-- <section class="w3l-quote-main" id="client">
     <div class="quote py-5">
         <div class="container py-lg-5">
             <div class="row">
@@ -273,11 +662,11 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- //testimonial -->
 
 <!-- home page blog-->
-<section class="w3l-blog py-5">
+<!-- <section class="w3l-blog py-5">
     <div class="container py-lg-5 py-md-3">
         <div class="row">
             <div class="col-lg-5">
@@ -302,17 +691,17 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- //home page blog-->
 <!-- freelance hire me -->
-<section class="w3l-grid-quote py-5">
+<!-- <section class="w3l-grid-quote py-5">
     <div class="container py-lg-3">
         <h6>I'am available for freelance projects.</h6>
         <h3>Let's work together indeed!</h3>
         <a href="contact.html" class="btn-style btn-primary btn">Get quotes</a>
         <a href="contact.html" class="btn btn-style btn-light ml-2">Hire me</a>
     </div>
-</section>
+</section> -->
 <!-- //freelance hire me -->
 
 <!-- Footer -->
